finalized and merged all together
